Update group service
add group.proto

create group.dto.go and group.service.go

add FindByToken

create group.handler.go

create group.router.go

update docs

๊Update .proto and .dto for group and user

Update group.service

Update group.handler

update group.proto

Update group.service

Update group.handler

Update group.router

update docs

fix error
