# src/docs/swagger.yaml
@@ -31,11 +31,29 @@ definitions:
         type: string
       leader_id:
         type: string
+      members:
+        items:
+          $ref: '#/definitions/dto.UserDto'
+        type: array
       token:
         type: string
     required:
     - leader_id
+    - members
     - token
+    type: object
+  dto.JoinGroupRequest:
+    properties:
+      is_leader:
+        type: boolean
+      members:
+        type: integer
+      user_id:
+        type: string
+    required:
+    - is_leader
+    - members
+    - user_id
     type: object
   dto.RedeemNewToken:
     properties:
@@ -133,6 +151,8 @@ definitions:
         type: string
       food_restriction:
         type: string
+      group_id:
+        type: string
       id:
         type: string
       lastname:
@@ -173,6 +193,10 @@ definitions:
         type: string
       leaderID:
         type: string
+      members:
+        items:
+          $ref: '#/definitions/proto.User'
+        type: array
       token:
         type: string
     type: object
@@ -193,6 +217,8 @@ definitions:
       firstname:
         type: string
       foodRestriction:
+        type: string
+      groupId:
         type: string
       id:
         type: string
@@ -219,9 +245,7 @@ info:
   contact:
     email: sd.team.sgcu@gmail.com
     name: ISD Team
-  description: |-
-    # RNKM API
-    This is the documentation for https://freshersfairs.com
+  description: "# RNKM API\r\nThis is the documentation for https://freshersfairs.com"
   title: RNKM Backend
   version: "1.0"
 paths:
@@ -375,9 +399,9 @@ paths:
       - application/json
       description: Return the group dto if successfully
       parameters:
-      - description: Group DTO
+      - description: Group dto
         in: body
-        name: group
+        name: groupDto
         required: true
         schema:
           $ref: '#/definitions/dto.GroupDto'
@@ -386,6 +410,49 @@ paths:
       responses:
         "201":
           description: Created
+          schema:
+            $ref: '#/definitions/proto.Group'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.ResponseBadRequestErr'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dto.ResponseUnauthorizedErr'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/dto.ResponseNotfoundErr'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ResponseInternalErr'
+        "503":
+          description: Service Unavailable
+          schema:
+            $ref: '#/definitions/dto.ResponseServiceDownErr'
+      security:
+      - AuthToken: []
+      summary: Create new group
+      tags:
+      - group
+    put:
+      consumes:
+      - application/json
+      description: Return the group dto if successfully
+      parameters:
+      - description: Group dto
+        in: body
+        name: groupDto
+        required: true
+        schema:
+          $ref: '#/definitions/dto.GroupDto'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
           schema:
             $ref: '#/definitions/proto.Group'
         "400":
@@ -410,7 +477,7 @@ paths:
             $ref: '#/definitions/dto.ResponseServiceDownErr'
       security:
       - AuthToken: []
-      summary: Create new group
+      summary: Update the existing group
       tags:
       - group
   /group/{token}:
@@ -421,7 +488,129 @@ paths:
       parameters:
       - description: id
         in: path
-        name: id
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/proto.Group'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dto.ResponseUnauthorizedErr'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/dto.ResponseNotfoundErr'
+        "503":
+          description: Service Unavailable
+          schema:
+            $ref: '#/definitions/dto.ResponseServiceDownErr'
+      summary: Get the group data by token
+      tags:
+      - group
+    post:
+      consumes:
+      - application/json
+      description: Return the group dto if successfully
+      parameters:
+      - description: token
+        in: path
+        name: token
+        required: true
+        type: string
+      - description: joinGroupRequest dto
+        in: body
+        name: joinRequest
+        required: true
+        schema:
+          $ref: '#/definitions/dto.JoinGroupRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/proto.Group'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.ResponseBadRequestErr'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dto.ResponseUnauthorizedErr'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/dto.ResponseForbiddenErr'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/dto.ResponseNotfoundErr'
+        "503":
+          description: Service Unavailable
+          schema:
+            $ref: '#/definitions/dto.ResponseServiceDownErr'
+      security:
+      - AuthToken: []
+      summary: Join the existing group
+      tags:
+      - group
+  /group/leave:
+    post:
+      consumes:
+      - application/json
+      description: Return the group dto if successfully
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/proto.Group'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.ResponseBadRequestErr'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dto.ResponseUnauthorizedErr'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/dto.ResponseForbiddenErr'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/dto.ResponseNotfoundErr'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ResponseInternalErr'
+        "503":
+          description: Service Unavailable
+          schema:
+            $ref: '#/definitions/dto.ResponseServiceDownErr'
+      security:
+      - AuthToken: []
+      summary: Leave the existing group and Create a new group
+      tags:
+      - group
+  /group/members/{member_id}:
+    delete:
+      consumes:
+      - application/json
+      description: Return the group dto if successfully
+      parameters:
+      - description: id
+        in: path
+        name: member_id
         required: true
         type: string
       produces:
@@ -439,6 +628,10 @@ paths:
           description: Unauthorized
           schema:
             $ref: '#/definitions/dto.ResponseUnauthorizedErr'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/dto.ResponseForbiddenErr'
         "404":
           description: Not Found
           schema:
@@ -447,7 +640,9 @@ paths:
           description: Service Unavailable
           schema:
             $ref: '#/definitions/dto.ResponseServiceDownErr'
-      summary: Get the group data by token
+      security:
+      - AuthToken: []
+      summary: Delete member from the group
       tags:
       - group
   /user:
@@ -650,35 +845,20 @@ securityDefinitions:
     type: apiKey
 swagger: "2.0"
 tags:
-- description: |-
-    # Health Check Tag API Documentation
-    **Health Check** functions goes here
+- description: "# Health Check Tag API Documentation\r\n**Health Check** functions
+    goes here"
   name: health check
-- description: |-
-    # Vaccine Tag API Documentation
-    **Vaccine** functions goes here
+- description: "# Vaccine Tag API Documentation\r\n**Vaccine** functions goes here"
   name: vaccine
-- description: |-
-    # Auth Tag API Documentation
-    **Auth** functions goes here
+- description: "# Auth Tag API Documentation\r\n**Auth** functions goes here"
   name: auth
-- description: |-
-    # User Tag API Documentation
-    **User** functions goes here
+- description: "# User Tag API Documentation\r\n**User** functions goes here"
   name: user
-- description: |-
-    # File Tag API Documentation
-    **File** functions goes here
+- description: "# File Tag API Documentation\r\n**File** functions goes here"
   name: file
-- description: |-
-    # Group Tag API Documentation
-    **Group** functions goes here
+- description: "# Group Tag API Documentation\r\n**Group** functions goes here"
   name: group
-- description: |-
-    # Baan Tag API Documentation
-    **Baan** functions goes here
+- description: "# Baan Tag API Documentation\r\n**Baan** functions goes here"
   name: baan
-- description: |-
-    # Event Tag API Documentation
-    **Event** functions goes here
+- description: "# Event Tag API Documentation\r\n**Event** functions goes here"
   name: event
